[gd_scene load_steps=6 format=2]

[ext_resource path="res://plane.gd" type="Script" id=1]
[ext_resource path="res://Plane.png" type="Texture" id=2]

[sub_resource type="CanvasItemMaterial" id=1]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 27.1247, 11.8926 )

[sub_resource type="SpriteFrames" id=3]
animations = [ {
"frames": [ ExtResource( 2 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[node name="RigidBody2D" type="Area2D"]
gravity_point = true
script = ExtResource( 1 )

[node name="Timer" type="Timer" parent="."]
autostart = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
modulate = Color( 0.988235, 0.866667, 0.866667, 1 )
material = SubResource( 1 )
position = Vector2( -0.554779, 4.71562 )
shape = SubResource( 2 )

[node name="Plane" type="AnimatedSprite" parent="CollisionShape2D"]
position = Vector2( 0, -0.459641 )
scale = Vector2( 1.73, 1.444 )
frames = SubResource( 3 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
position = Vector2( -0.670651, 4.47252 )
scale = Vector2( 2.59254, 1.04421 )
[connection signal="body_entered" from="." to="." method="_on_RigidBody2D_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
